updating to set 40

--- a/src/domain-server/config.json
+++ b/src/domain-server/config.json
@@ -23,16 +23,16 @@
     },
     "paths": {
         "/": {
-            "viewpoint": "/0.294317,-200.505,-5.06592/0,0.999422,0,0.0339854"
+            "viewpoint": "/0,-10,0/0,0.999422,0,0.0339854"
         },
-        "/garden": {
-            "viewpoint": "/28.676,0.453707,-0.722701/0,0.68873,0,0.725018"
+		"/garden": {
+            "viewpoint": "/0,-10,0/0,0.999422,0,0.0339854"
         },
         "/tutorial": {
-            "viewpoint": "/0.0148298,0.544884,-0.0988989/0,-0.714636,0,0.699496"
+            "viewpoint": "/0,-10,0/0,0.999422,0,0.0339854"
         },
         "/tutorial_begin": {
-            "viewpoint": "/-13.3688,0.452729,0.501879/0,-0.711902,0,0.702279"
+            "viewpoint": "/0,-10,0/0,0.999422,0,0.0339854"
         }
     },
     "scripts": {
