updating for tutorial version 44

--- a/src/domain-server/config.json
+++ b/src/domain-server/config.json
@@ -1,7 +1,7 @@
 {
     "paths": {
         "/": {
-            "viewpoint": "/0,-10,0/0,0.999422,0,0.0339854"
+            "viewpoint": "/0,-10,0/0,-0.708837,0,0.705372"
         }
     }
 }
